Added Report generation logic

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-couchbase</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.19.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
